--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EHj-GJ-FBE"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbD-Yc-dQ8">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="165" width="176" height="81"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="MoX-pM-37N"/>
                                 <exclude reference="scg-Eo-byf"/>
                                 <exclude reference="0fq-5c-dzb"/>
+                                <exclude reference="rbD-Yc-dQ8"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="MoX-pM-37N"/>
                                 <include reference="scg-Eo-byf"/>
                                 <include reference="0fq-5c-dzb"/>
+                                <include reference="rbD-Yc-dQ8"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="aGU-A7-u30" id="Pgg-0B-PWG"/>
                         <outlet property="mailButton" destination="0fq-5c-dzb" id="zww-Im-HCg"/>
                         <outlet property="messageLabel" destination="MoX-pM-37N" id="zlf-yJ-Dn7"/>
+                        <outlet property="nameLabel" destination="rbD-Yc-dQ8" id="vFP-Of-wOg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
